# tenjin

./: Cargo.toml  README.md
src/: main.rs
src/app/: app.rs  app_message.rs  mod.rs  subscriptions.rs
src/app/components/: intent_suggestion.rs  mod.rs
src/listener/: mod.rs  watchdog_listener.rs
src/model/: app_message.rs  intent.rs  mod.rs
