[package]
name = "tenjin"
description = "The 21st century deity of knowledge and scolarship."
authors = ["Jan Halozan"]

version = "0.1.0"
edition = "2021"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = ["lazy"] }
web-sys = "0.3.69"
rdev = { "git" = "https://github.com/rustdesk-org/rdev.git", branch = "master" }
tokio = { version = "1.39.3", features = ["full"] }
winit = "0.30.5"

# iced = "0.12.0"
# rdev = "0.5.3"
# anyhow = "1.0.0"