[package]
name = "tenjin"
description = "The 21st century deity of knowledge and scolarship."
authors = ["Jan Halozan"]

version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["lazy", "async-std", "debug"]}
web-sys = "0.3.69"
rdev = { "git" = "https://github.com/rustdesk-org/rdev.git", branch = "master" }
tokio = { version = "1.39.3", features = ["full"] }
winit = "0.30.5"